[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazys3"
version = "1.2.0"  # Update this to match your package version
description = "LAZYS3 is a powerful command-line tool designed for seamless interaction with Amazon S3 (Simple Storage Service)"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["lazys3"]
[tool.setuptools.packages.find]
where = ["src"]
